<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="plus_minus">±</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Профиль</string>
    <string name="menu_settins">Настройки</string>
    <string name="menu_safety">Безопасность</string>
    <string name="to_next_layout">To Next Layout</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="original_country">Original Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_csv">Export as CSV</string>
</resources>