<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Gray.Button"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus_minus"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="15dp"
                android:text="@string/plus_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Gray.Button"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/Orange.Button"
                android:layout_marginStart="15dp"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Dark.Button"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="15dp"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Dark.Button"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Orange.Button"
                android:layout_marginStart="15dp"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Dark.Button"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="15dp"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Dark.Button"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:layout_marginStart="15dp"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Dark.Button"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="15dp"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Dark.Button"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:layout_marginStart="15dp"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Dark.Button"
                android:layout_width="175dp"
                android:layout_marginEnd="15dp"
                android:gravity="left|center"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Dark.Button"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Orange.Button"
                android:layout_marginStart="15dp"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_next_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/to_next_layout"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:backgroundTint="@color/gray"
        app:cornerRadius="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_next_layout">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>