<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_home"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/policies"
        android:textAlignment="center"
        android:textColor="@color/pol_home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_policy"
        style="@style/Home.Button"
        android:layout_marginTop="50dp"
        android:text="@string/policy"
        app:layout_constraintTop_toBottomOf="@id/text_home" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_product_category"
        style="@style/Home.Button"
        android:text="@string/product_category"
        app:layout_constraintTop_toBottomOf="@+id/btn_policy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_original_country"
        style="@style/Home.Button"
        android:text="@string/original_country"
        app:layout_constraintTop_toBottomOf="@+id/btn_product_category" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_brand"
        style="@style/Home.Button"
        android:text="@string/brand"
        app:layout_constraintTop_toBottomOf="@+id/btn_original_country" />

    <TextView
        android:id="@+id/tv_current_policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/current_policies"
        android:textAlignment="center"
        android:textColor="@color/pol_home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_brand" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/export_as_csv"
        android:text="@string/export_as_csv"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_policies" />

</androidx.constraintlayout.widget.ConstraintLayout>